# CoPilot-Workshop

./: .gitignore  Copilot-features.md  DAY-OF-WORKSHOP-SCRIPT.md  INSTRUCTOR-READINESS-CHECKLIST.md  SESSIONS-1-2-STUDENT-SETUP.md  SIMPLE-REPO-SETUP.md  WORKSHOP-INTRODUCTION-SCRIPT.md  YOU-ARE-READY.md  copilot-curriculum.md  workshop-restructure-prompt-v2.md
copilot-workshop-instructor/: Workshop_Welcome_Email.md
copilot-workshop-instructor/workshops/micro-workshop/: knowledge.md  memory-bank-workshop-section.md
copilot-workshop-instructor/workshops/micro-workshop/misc/: BEST-PRACTICES-ADDENDUM.md
copilot-workshop-instructor/workshops/micro-workshop/session-1/: PROMPT-SHEET-SESSION-1.md  student-packet-micro-1.md  (+2 more)
copilot-workshop-student/: .copilotignore-example  PRD.md  README.md  model-selection-guide.md  pyproject.toml  requirements.txt
copilot-workshop-student/.github/: copilot-instructions.md
copilot-workshop-student/session-1/: PROMPT-SHEET-SESSION-1.md  student-packet-micro-1.md
copilot-workshop-student/session-2/: PROMPT-SHEET-SESSION-2.md  student-packet-micro-2.md
copilot-workshop-student/session-3/: PROMPT-SHEET-SESSION-3.md  student-packet-micro-3.md
copilot-workshop-student/session-4/: PROMPT-SHEET-SESSION-4.md  student-packet-micro-4.md  student-reference-micro-4.md
copilot-workshop-student/src/: main.py
copilot-workshop-student/src/api/v1/: __init__.py
copilot-workshop-student/src/models/: __init__.py  base.py  todo.py  user.py
copilot-workshop-student/src/schemas/: __init__.py
copilot-workshop-student/src/services/: __init__.py
(+16 files in other folders)
